# server/cmd/docs/swagger.json
@@ -80,8 +80,8 @@
                 "tags": [
                     "device"
                 ],
-                "summary": "UpdateDevicePosition",
-                "operationId": "updateDevicePosition",
+                "summary": "UpsertDevicePosition",
+                "operationId": "upsertDevicePosition",
                 "parameters": [
                     {
                         "description": "Device Request",
@@ -179,11 +179,15 @@
             "type": "object",
             "required": [
                 "device_id",
+                "is_active",
                 "readings"
             ],
             "properties": {
                 "device_id": {
                     "type": "string"
+                },
+                "is_active": {
+                    "type": "boolean"
                 },
                 "readings": {
                     "type": "array",
